--- a/index.html
+++ b/index.html
@@ -198,6 +198,78 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-text">
+                <h3>Hipcamp is everywhere you want to camp.</h3>
+                <p>Discover unique experiences on ranches, nature preserves, farms, vineyards, and public campgrounds across the U.S. Book tent camping, treehouses, cabins, yurts, primitive backcountry sites, car camping, airstreams, tiny houses, RV camping, glamping t</p>
+            </div>
+            <div class="footer-links">
+                <h3>Get to Know Us</h3>
+                <ul>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Rules & Reservation Policies</a>
+                    </li>
+                    <li>
+                        <a href="#">Accessibility</a>
+                    </li>
+                    <li>
+                        <a href="#">Media Center</a>
+                    </li>
+                    <li>
+                        <a href="#">Site Map</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Plan With Us</h3>
+                <ul>
+                    <li>
+                        <a href="#">Finf Trip Inspiration</a>
+                    </li>
+                    <li>
+                        <a href="#">Build a Trip</a>
+                    </li>
+                    <li>
+                        <a href="#">Buy a Pass</a>
+                    </li>
+                    <li>
+                        <a href="#">Enter a lottery</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Let Us Help You</h3>
+                <ul>
+                    <li>
+                        <a href="#">Your Account</a>
+                    </li>
+                    <li>
+                        <a href="#">Your Reservations</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Help Center</a>
+                    </li>
+                    <li>
+                        <a href="#">Submit Feedback</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="d-app">
+            <p>Download Our App</p>
+            <img src="images/d-apps.png" alt="app-img">
+        </div>
+        <div class="copyRight">
+            <p>© 2020. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
