--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div class="fav-added">
-        <h1>Sorry, We don't have this feature yet</h1>
+        <h1>Sorry, I don't have this feature yet</h1>
         <i class="fa fa-star-half-o" aria-hidden="true"></i>
     </div>
     <div class="adding-basket">
